updated execute class

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Jyoti Singh\AppData\Local\Temp\testng-eclipse--573338720\testng-customsuite.xml</span>
+                    <span>C:\Users\Jyoti Singh\AppData\Local\Temp\testng-eclipse-603432763\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.ExecuteCases" hash-for-method="userRegisterationWithInvalidDetails">userRegisterationWithInvalidDetails</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.ExecuteCases" hash-for-method="UserRegistrationWithInvalidDetails">UserRegistrationWithInvalidDetails</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="userRegisterationWithInvalidDetails">
-                  </a> <!-- userRegisterationWithInvalidDetails -->
-                  <span class="method-name">userRegisterationWithInvalidDetails</span>
+                  <a name="UserRegistrationWithInvalidDetails">
+                  </a> <!-- UserRegistrationWithInvalidDetails -->
+                  <span class="method-name">UserRegistrationWithInvalidDetails</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Jyoti Singh\AppData\Local\Temp\testng-eclipse--573338720\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Jyoti Singh\AppData\Local\Temp\testng-eclipse-603432763\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'userRegisterationWithInvalidDetails')
+data.setCell(0, 1, 'UserRegistrationWithInvalidDetails')
 data.setCell(0, 2, 'testCases.ExecuteCases')
-data.setCell(0, 3, 24806);
+data.setCell(0, 3, 23459);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,12 +225,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">userRegisterationWithInvalidDetails</span>
-                <span class="method-start">15802 ms</span>
+                <span class="method-name">UserRegistrationWithInvalidDetails</span>
+                <span class="method-start">12286 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
-                <span class="method-name">TearDown</span>
-                <span class="method-start">40616 ms</span>
+                <span class="method-name">CloseBrowser</span>
+                <span class="method-start">35755 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
